@@ -68,6 +68,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|security
+operator|.
+name|AccessController
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|security
+operator|.
+name|PrivilegedAction
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|text
 operator|.
 name|DecimalFormat
@@ -1310,14 +1330,48 @@ argument_list|()
 control|)
 block|{
 specifier|final
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|target
+init|=
+name|clazz
+decl_stmt|;
+specifier|final
 name|Field
 index|[]
 name|fields
 init|=
-name|clazz
+name|AccessController
+operator|.
+name|doPrivileged
+argument_list|(
+operator|new
+name|PrivilegedAction
+argument_list|<
+name|Field
+index|[]
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Field
+index|[]
+name|run
+parameter_list|()
+block|{
+return|return
+name|target
 operator|.
 name|getDeclaredFields
 argument_list|()
+return|;
+block|}
+block|}
+argument_list|)
 decl_stmt|;
 for|for
 control|(
